Fixed minor css alignment issue

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -134,7 +134,7 @@
 }
 
 .jumbotron h1 {
-	color: white;
+	color: black;
 	font-size: 60px;
 	font-weight: bolder;
 	font-family: 'Kalam', cursive, 'Open Sans', sans-serif;
@@ -193,7 +193,7 @@
 	background: linear-gradient(to bottom,  rgba(140,140,140,0.65) 0%,rgba(92,92,92,0) 34%,rgba(0,0,0,0) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a68c8c8c', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
 	position: relative;
-	bottom: 30px;
+	bottom: 120px;
 }
 .inside-y .container {
 	position: relative;
